修改相【相关产品】界面：点击产品编码即弹出产品选择对话框。

--- a/WebRoot/css/style.css
+++ b/WebRoot/css/style.css
@@ -201,3 +201,18 @@ div.datagrid-cell{
 .colorSpan{
 	padding: 0px 4px;
 }
+
+
+.textbox.textbox-readonly {
+    cursor: normal;
+    background-color: #ddd;
+    color: #999;
+}
+
+.textbox.textbox-readonly .textbox-text{
+	cursor: normal;
+    background-color: #ddd;
+    color: #999;
+}
+    
+}
